--- a/Telecom_Churn_Prediction.ipynb
+++ b/Telecom_Churn_Prediction.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#         # **Customer Churn Prediction**\n",
+        "         # **Customer Churn Prediction**\n",
         "Our goal is to analyze customer data, preprocess it, select the most important features, and apply various machine learning models to predict whether a customer is likely to churn (leave the company). After training multiple classification models, the best-performing model will be selected based on evaluation metrics.\n",
         "\n",
         "**The notebook follows these key steps:**\n",
